Fixed Spacing between project items

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -104,7 +104,7 @@ a:hover {
 .project-extract {
   font-style: italic;
   color: #666;
-  margin-bottom: 0rem;
+  margin-bottom: 1rem;
 }
 
 footer {
