--- a/_sass/project.scss
+++ b/_sass/project.scss
@@ -40,6 +40,7 @@
 
 .project-card h4 {
   margin-top: 0;
+  margin-bottom: 0;
   color: var(--primary-color);
   font-size: 1.2rem;
 }
@@ -53,6 +54,7 @@
   font-size: 0.9rem;
   color: var(--accent-color);
   margin-bottom: 1rem;
+  margin-top: 0rem;
 }
 
 .project-card a {
